Fixed overflow bug

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -12,7 +12,8 @@
 	bottom:0;
 	left:0;
 	right:0;
-	
+	overflow: hidden;
+
 	video {
 		width: 100%;
 	}
